# FeRamDisk

./: LICENSE  README.md
.github/workflows/: release.yml
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: app.rs  feram.rs  init.rs  lib.rs  main.rs  spi.rs  storage.rs  usb_msc.rs
firmware/src/backend/: hardware.rs  mod.rs  simulated.rs
firmware/src/drivers/: feram.rs  mod.rs
firmware/src/storage/: backend.rs  block.rs  error.rs  mod.rs
firmware/src/storage/journal/: layout.rs  metadata.rs  mod.rs
firmware/src/usb/: commands.rs  constants.rs  core.rs  device.rs  mod.rs  msc.rs  scsi.rs  storage.rs
firmware/tests/: bot_protocol.rs  scsi_commands.rs  storage_journal.rs
firmware/tests/common/: mock_endpoint.rs  mod.rs  test_harness.rs
hardware/: .gitattributes  .gitignore  FeRamDisk.kicad_pcb  FeRamDisk.kicad_pro  FeRamDisk.kicad_sch
