[package]
name = "feramdisk-firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "feramdisk-firmware"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.6.0", features = ["stm32g431cb", "time-driver-any", "exti", "memory-x"] }
embassy-usb-driver = "0.2.0"
embassy-time = "0.5.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
rtt-target = "0.6.2"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
